--- a/开发日志.md
+++ b/开发日志.md
@@ -1,1 +1,7 @@
 Object Spawner里面有一个stop spawn的属性，关掉它即可以在平面上生成物体。
+
+2025.12.26
+
+向goalmanager投降，在其中新增了一个跳过教程的函数CompleteCoaching()而非试图修改StartCoaching()，应该能运行。。。
+
+2025.12.27
